--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <title>Elegant Bite Catering</title>
 <html lang="en" id="ElegantbitecateringLLC">
 <link rel="stylesheet" href="css/elegantbitcateringstyle.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <div class="head-container">
         <div class="logo">
