--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <title>Elegant Bite Catering</title>
 <html lang="en" id="ElegantbitecateringLLC">
 <link rel="stylesheet" href="css/elegantbitcateringstyle.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <div class="head-container">
         <div class="logo">
-            <img src="https://cdn.discordapp.com/attachments/1017985417745801336/1175849905277911050/Elegantbitcateringlogo.png?ex=656cba8f&is=655a458f&hm=f99406cd61ca06f5eb2e92ddf831d08659d23234247f05162da5458422caa57d&" width="100%" height="100%">
+            <img src="C:\Users\andyc\OneDrive\Desktop\ElegantBiteCateringSite\img\Elegantbitcateringlogo.png" width="100%" height="100%">
         </div>
         <div class="links">
             <a class="elegantsweets-container" href="elegantsweets.html">
@@ -32,7 +31,7 @@
             <a class="email">elegantbitcatering@hotmail.com</a>
         </div>
         <div class="withphone-container">
-            <a class="withphone">Or With phone call</a>
+            <a class="withphone">Or With phone</a>
         </div>
         <div class="phonenumber-continer">
             <a class="phonenumber">(513)-430-1992</a>
