--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -4,7 +4,7 @@
     <head>
         <div class="head-container">
             <div class="logo">
-                <img src="C:\Users\andyc\OneDrive\Desktop\ElegantBiteCateringSite\img\ElegantSweetslogo.png" width="100%" height="100%">
+                <img src="https://cdn.discordapp.com/attachments/1017985417745801336/1175863861606371438/ElegantSweetslogo.png?ex=656cc78f&is=655a528f&hm=fc4e79c8062c6caba60d934a333a722049ed7550463da5bb887dd6a18d183629&" width="100%" height="100%">
             </div>
             <div class="links">
                 <a class="elegantsweets-container" href="index.html">
