--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" id="ElegantbitecateringLLC">
 <link rel="stylesheet" href="css/elegantbitcateringstyle.css">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div class="head-container">
         <div class="logo">
             <img src="https://cdn.discordapp.com/attachments/1017985417745801336/1175849905277911050/Elegantbitcateringlogo.png?ex=656cba8f&is=655a458f&hm=f99406cd61ca06f5eb2e92ddf831d08659d23234247f05162da5458422caa57d&" width="100%" height="100%">
