--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -2,6 +2,7 @@
 <html lang="en" id="ElegantbitecateringLLC">
     <link rel="stylesheet" href="css/elgantsweetsstyle.css">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <div class="head-container">
             <div class="logo">
                 <img src="https://cdn.discordapp.com/attachments/1017985417745801336/1175863861606371438/ElegantSweetslogo.png?ex=656cc78f&is=655a528f&hm=fc4e79c8062c6caba60d934a333a722049ed7550463da5bb887dd6a18d183629&" width="100%" height="100%">
