--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <img src="https://cdn.discordapp.com/attachments/1017985417745801336/1175849905277911050/Elegantbitcateringlogo.png?ex=656cba8f&is=655a458f&hm=f99406cd61ca06f5eb2e92ddf831d08659d23234247f05162da5458422caa57d&" width="100%" height="100%">
         </div>
         <div class="links">
-            <a class="elegantsweets-container" href="elegantsweets.html">
+            <a class="elegantsweets-container" href="elegantsweets">
                 <button class="elegantsweets-button">ElegantSweets</button>
             </a>
         </div>
