--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -8,7 +8,7 @@
                 <img src="https://github.com/Elegantbitecatering/elegantbitecatering/blob/main/img/ElegantSweetslogo.png?raw=true" width="100%" height="100%">
             </div>
             <div class="links">
-                <a class="elegantsweets-container" href="index.html">
+                <a class="elegantsweets-container" href="index">
                     <button class="elegantsweets-button">ElegantBiteCatering</button>
                 </a>
             </div>
@@ -94,7 +94,7 @@
     </div>
 </footer>
 <div class="copyright-container">
-    <a style="text-decoration:none" href="https://elegantbitecatering.com/elegantsweets.html" class="footer-copyright">© 2023 ElegantbitecateringLLC</a>
+    <a style="text-decoration:none" href="elegantsweets" class="footer-copyright">© 2023 ElegantbitecateringLLC</a>
     </div>
     
 </html>
