--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -8,7 +8,7 @@
                 <img src="https://github.com/Elegantbitecatering/elegantbitecatering/blob/main/img/ElegantSweetslogo.png?raw=true" width="100%" height="100%">
             </div>
             <div class="links">
-                <a class="elegantsweets-container" href="index">
+                <a class="elegantsweets-container" href="https://elegantbitecatering.com">
                     <button class="elegantsweets-button">ElegantBiteCatering</button>
                 </a>
             </div>
