--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <a class="email">elegantbitcatering@hotmail.com</a>
         </div>
         <div class="withphone-container">
-            <a class="withphone">Or With phone</a>
+            <a class="withphone">With phone</a>
         </div>
         <div class="phonenumber-continer">
-            <a class="phonenumber">(513)-316-0498</a>
+            <a class="phonenumber">(513)-714-4600</a>
         </div>
     </div>
 </div>
