--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -8,7 +8,7 @@
                 <img src="https://github.com/Elegantbitecatering/elegantbitecatering/blob/main/img/ElegantSweetslogo.png?raw=true" width="100%" height="100%">
             </div>
             <div class="links">
-                <a class="elegantsweets-container" href="https://elegantbitecatering.com">
+                <a class="elegantsweets-container" href="index.html">
                     <button class="elegantsweets-button">ElegantBiteCatering</button>
                 </a>
             </div>
@@ -52,7 +52,7 @@
             <a class="withphone">With phone</a>
         </div>
         <div class="phonenumber-continer">
-            <a class="phonenumber">(513)-714-4600</a>
+            <a class="phonenumber">(513)-316-0498</a>
         </div>
     </div>
 </div>
@@ -82,7 +82,7 @@
                 <a class="email">elegantbitcatering@hotmail.com</a>
             </div>
             <div class="phonenumber-continer">
-                <a class="phonenumber">(513)-716-4600</a>
+                <a class="phonenumber">(513)-316-0498</a>
             </div>
         </div>
         <div class="footer-block4">
@@ -94,7 +94,6 @@
     </div>
 </footer>
 <div class="copyright-container">
-    <a style="text-decoration:none" href="elegantsweets" class="footer-copyright">© 2023 ElegantbitecateringLLC</a>
+    <a style="text-decoration:none" href="elegantsweets.html" class="footer-copyright">© 2023 ElegantbitecateringLLC</a>
     </div>
-    
 </html>
