--- a/fattoamanolocation.html
+++ b/fattoamanolocation.html
@@ -1,5 +1,5 @@
 <title>Fatto A Mano</title>
-<link rel="stylesheet" href="css/fattoamano.css">
+<link rel="stylesheet" href="css/fattoamanolocation.css">
 <link rel="icon" type="image/x-icon" href="img/fattoamanoico.ico">
 <link rel="stylesheet" href="https://use.typekit.net/xor7tlf.css">
 <html lang="en" id="ElegantbitecateringLLC">
@@ -12,8 +12,8 @@
                 <a class="menu-container" href="fattoamanomenu.html">
                     <button class="menu-button">Menu</button>
                 </a> 
-                <a class="location-container" href="fattoamanolocation.html">
-                    <button class="location-button">Location</button>
+                <a class="location-container" href="fattoamano.html">
+                    <button class="location-button">Home</button>
                 </a> 
             </div>
         </div>
@@ -33,7 +33,7 @@
     </div>
     <footer>
         <div class="logo-container-footer">
-            <img src="img/PfpLogoWhite.png" width="100%" height="50%">   
+            <img src="img/PfpLogoWhite.png" width="120%" height="50%">   
         </div>
         <div class="footer-links">
             <div class="catering-link-container">
@@ -58,7 +58,4 @@
             </div>
         </div>
     </footer>
-    <div class="copyright-container">
-        <a style="text-decoration:none" href="fattoamano.html" class="footer-copyright">© 2023 ElegantbitecateringLLC</a>
-     </div>
 </html>
