--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
     </div>
 </footer>
 <div class="copyright-container">
-    <a style="text-decoration:none" href="index.html" class="footer-copyright">© 2023 ElegantbitecateringLLC</a>
+    <a style="text-decoration:none" href="index" class="footer-copyright">© 2023 ElegantbitecateringLLC</a>
     </div>
 </html>
