--- a/fattoamanolocation.html
+++ b/fattoamanolocation.html
@@ -9,10 +9,10 @@
                 <img src="img/PfpLogoWhite.png" width="100%" height="10%">   
             </div>
             <div class="links">
-                <a class="menu-container" href="fattoamanomenu.html">
+                <a class="menu-container" href="fattoamanomenu">
                     <button class="menu-button">Menu</button>
                 </a> 
-                <a class="location-container" href="fattoamano.html">
+                <a class="location-container" href="fattoamano">
                     <button class="location-button">Home</button>
                 </a> 
             </div>
@@ -40,10 +40,10 @@
                 <a style="text-decoration:none" href="https://elegantbitecatering.com" class="catering-link">Catering</a>
             </div>
             <div class="footer-location-link-container">
-                <a style="text-decoration:none" href="fattoamanolocation.html" class="footer-location-link">location</a>
+                <a style="text-decoration:none" href="fattoamanolocation" class="footer-location-link">location</a>
             </div>
             <div class="footer-menu-link-container">
-                <a style="text-decoration:none" href="fattoamanomenu.html" class="footer-menu-link">Menu</a>
+                <a style="text-decoration:none" href="fattoamanomenu" class="footer-menu-link">Menu</a>
             </div>
         </div>
         <div class="footer-contact-container">
