--- a/fattoamano.html
+++ b/fattoamano.html
@@ -9,10 +9,10 @@
                 <img src="img/PfpLogoWhite.png" width="100%" height="10%">   
             </div>
             <div class="links">
-                <a class="menu-container" href="fattoamanomenu.html">
+                <a class="menu-container" href="fattoamanomenu">
                     <button class="menu-button">Menu</button>
                 </a> 
-                <a class="location-container" href="fattoamanolocation.html">
+                <a class="location-container" href="fattoamanolocation">
                     <button class="location-button">Location</button>
                 </a> 
             </div>
@@ -40,10 +40,10 @@
                 <a style="text-decoration:none" href="https://elegantbitecatering.com" class="catering-link">Catering</a>
             </div>
             <div class="footer-location-link-container">
-                <a style="text-decoration:none" href="fattoamanolocation.html" class="footer-location-link">location</a>
+                <a style="text-decoration:none" href="fattoamanolocation" class="footer-location-link">location</a>
             </div>
             <div class="footer-menu-link-container">
-                <a style="text-decoration:none" href="fattoamanomenu.html" class="footer-menu-link">Menu</a>
+                <a style="text-decoration:none" href="fattoamanomenu" class="footer-menu-link">Menu</a>
             </div>
         </div>
         <div class="footer-contact-container">
@@ -59,6 +59,6 @@
         </div>
     </footer>
     <div class="copyright-container">
-        <a style="text-decoration:none" href="fattoamano.html" class="footer-copyright">© 2023 ElegantbitecateringLLC</a>
+        <a style="text-decoration:none" href="fattoamano" class="footer-copyright">© 2023 ElegantbitecateringLLC</a>
      </div>
 </html>
