--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
             <a class="logo-text">ElegantBiteCatering</a>
         </div>
         <div class="links">
-            <a class="elegantsweets-container" href="elegantsweets.html">
+            <a class="elegantsweets-container" href="elegantsweets">
                 <button class="elegantsweets-button">ElegantSweets</button>
             </a>
-            <a class="fattoamano-container" href="fattoamano.html">
+            <a class="fattoamano-container" href="fattoamano">
                 <button class="fattoamano-button">FattoaMano</button>
             </a>
         </div>
