--- a/fattoamanolocation.html
+++ b/fattoamanolocation.html
@@ -58,4 +58,7 @@
             </div>
         </div>
     </footer>
+    <div class="copyright-container">
+        <a style="text-decoration:none" href="fattoamano" class="footer-copyright">© 2023 ElegantbitecateringLLC</a>
+    </div>
 </html>
