--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <button class="logo-text">Elegant Bite Catering</button>
             </a>
             <div class="links">
-                <a class="elegantsweets-container" href="elegantsweets.html">
+                <a class="elegantsweets-container" href="elegantsweets">
                     <button class="elegantsweets-button">ElegantSweets</button>
                 </a>
-                <a class="fattoamano-container" href="fattoamano.html">
+                <a class="fattoamano-container" href="fattoamano">
                     <button class="fattoamano-button">FattoaMano</button>
                 </a>
             </div>
@@ -76,8 +76,8 @@
             <div class="footer-links">
                 <a class="links-text">Links</a>
                 <dt class="fl-info"><a href="#head-container"><button class="fl-infob">Catering</button></a></dt>
-                <dt class="fl-info"><a href="elegantsweets.html"><button class="fl-infob">Sweets</button></a></dt>
-                <dt class="fl-info"><a href="fattoamano.html"><button class="fl-infob">FattoaMano</button></a></dt>
+                <dt class="fl-info"><a href="elegantsweets"><button class="fl-infob">Sweets</button></a></dt>
+                <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
             </div>
             <a class="copy-container" href="#head-container">
                 <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
