--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a class="elegantsweets-container" href="elegantsweets">
                     <button class="elegantsweets-button">ElegantSweets</button>
                 </a>
-                <a class="fattoamano-container" href="">
+                <a class="fattoamano-container" href="fattoamano">
                     <button class="fattoamano-button">FattoaMano</button>
                 </a>
             </div>
@@ -77,7 +77,7 @@
                 <a class="links-text">Links</a>
                 <dt class="fl-info"><a href="#head-container"><button class="fl-infob">Catering</button></a></dt>
                 <dt class="fl-info"><a href="elegantsweets"><button class="fl-infob">Sweets</button></a></dt>
-                <dt class="fl-info"><a href=""><button class="fl-infob">FattoaMano</button></a></dt>
+                <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
             </div>
             <a class="copy-container" href="#head-container">
                 <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
