--- a/fattoamano.html
+++ b/fattoamano.html
@@ -13,10 +13,10 @@
                     <img src="img/PfpLogoWhite.png" width="100%" height="10%">   
                 </div>
                 <div class="links">
-                    <a class="menu-container" href="fattoamanomenu.html">
+                    <a class="menu-container" href="fattoamanomenu">
                         <button class="menu-button">Menu</button>
                     </a> 
-                    <a class="location-container" href="fattoamanolocation.html">
+                    <a class="location-container" href="fattoamanolocation">
                         <button class="location-button">Location</button>
                     </a> 
                 </div>
@@ -50,8 +50,8 @@
             <div class="footer-links">
                 <a class="links-text">Links</a>
                 <dt class="fl-info"><a href="#header-container"><button class="fl-infob">FattoaMano</button></a></dt>
-                <dt class="fl-info"><a href="elegantsweets.html"><button class="fl-infob">Sweets</button></a></dt>
-                <dt class="fl-info"><a href="index.html"><button class="fl-infob">Catering</button></a></dt>
+                <dt class="fl-info"><a href="elegantsweets"><button class="fl-infob">Sweets</button></a></dt>
+                <dt class="fl-info"><a href="https://www.elegantbitecatering.com"><button class="fl-infob">Catering</button></a></dt>
             </div>
             <div class="copyright-container">
                 <a class="copy-container" href="#header-container">
