--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -12,10 +12,10 @@
                     <img src="img/PfpLogoWhite.png" width="100%" height="10%">   
                 </div>
                 <div class="links">
-                    <a class="menu-container" href="fattoamano.html">
+                    <a class="menu-container" href="fattoamano">
                         <button class="menu-button">Home</button>
                     </a> 
-                    <a class="location-container" href="fattoamanolocation.html">
+                    <a class="location-container" href="fattoamanolocation">
                         <button class="location-button">Location</button>
                     </a> 
                 </div>
@@ -80,8 +80,8 @@
             <div class="footer-links">
                 <a class="links-text">Links</a>
                 <dt class="fl-info"><a href="#header-container"><button class="fl-infob">FattoaMano</button></a></dt>
-                <dt class="fl-info"><a href="elegantsweets.html"><button class="fl-infob">Sweets</button></a></dt>
-                <dt class="fl-info"><a href="index.html"><button class="fl-infob">Catering</button></a></dt>
+                <dt class="fl-info"><a href="elegantsweets"><button class="fl-infob">Sweets</button></a></dt>
+                <dt class="fl-info"><a href="https://elegantbitecatering.com"><button class="fl-infob">Catering</button></a></dt>
             </div>
             <div class="copyright-container">
                 <a class="copy-container" href="#header-container">
