--- a/fattoamanolocation.html
+++ b/fattoamanolocation.html
@@ -28,7 +28,7 @@
         </div>
         <div class="b2">
             <div class="b2-text-container">
-                <a class="b2-text">We are not a location yet come back and check when we are.</a>
+                <a class="b2-text">We are not at a location yet come back and check when we are.</a>
             </div>
             <div class="gmap-container" id="gmap-container">
                 <iframe class="gmap" width="600" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=fatto%20a%20mano%20wood%20fire%20pizza&key=AIzaSyAfI75qyaa3vqLvq-40hitYO0zJA7zEt-w"></iframe>
