--- a/fattoamano.html
+++ b/fattoamano.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en" id="ElegantbitecateringLLC" style="scroll-behavior: smooth;">
     <head>
         <title>Fatto A Mano</title>
