--- a/fattoamano.html
+++ b/fattoamano.html
@@ -10,7 +10,7 @@
         <header>
             <div class="header-container" id="header-container">
                 <div class="logo-container">
-                    <img src="img/PfpLogoWhite.png" width="100%" height="10%">   
+                    <img src="img/PfpLogoWhite.png">   
                 </div>
                 <div class="links">
                     <a class="menu-container" href="fattoamanomenu">
@@ -38,7 +38,7 @@
     <footer>
         <div class="footer-container">
             <div class="fl-container">
-                <img src="img/PfpLogoWhite.png" width="100%" height="10%">
+                <img src="img/PfpLogoWhite.png">
             </div>
             <div class="footer-contact">
                 <a class="fc-text">Contact</a>
