Added INC to Everyone

--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -1,4 +1,4 @@
-<html lang="en" id="ElegantbitecateringLLC" style="scroll-behavior: smooth;">
+<html lang="en" id="ELEGANTBITECATERINGLLC" style="scroll-behavior: smooth;">
     <head>
         <title>Elegant Sweets</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -76,7 +76,7 @@
             <dt class="fl-info"><a href="fattoamano.html"><button class="fl-infob">FattoaMano</button></a></dt>
         </div>
         <a class="copy-container" href="#head-container">
-            <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
+            <button class="copyright">© 2024 ELEGANTBITECATERINGINC</button>
         </a>
     </div>
     </footer>
