--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -1,4 +1,4 @@
-<html lang="en" id="ElegantbitecateringLLC" style="scroll-behavior: smooth;">
+<html lang="en" id="ELEGANTBITECATERINGINC" style="scroll-behavior: smooth;">
     <head>
         <title>Fatto A Mano</title>
         <link rel="stylesheet" href="css/fattoamanomenu.css">
