--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="ElegantbitecateringLLC" style="scroll-behavior: smooth;">
+<html lang="en" id="ELEGANTBITECATERINGINC" style="scroll-behavior: smooth;">
     <head>
         <title>Elegant Bite Catering</title>
         <link rel="stylesheet" href="css/elegantbitecateringstyle.css">
@@ -80,7 +80,7 @@
                 <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
             </div>
             <a class="copy-container" href="#head-container">
-                <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
+                <button class="copyright">© 2024 ELEGANTBITECATERINGINC</button>
             </a>
         </div>
     </footer>
