Added Google Anylitics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">   
         <link rel="stylesheet" href="https://use.typekit.net/xor7tlf.css">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-TJZW9KMR0Y"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-TJZW9KMR0Y');
+        </script>
     </head>
 <body>
     <header>
