--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -10,7 +10,7 @@
                 <a>ElegantSweets</a>
             </div>
             <div class="links">
-                <a class="elegantsweets-container" href="index.html">
+                <a class="elegantsweets-container" href="https://elegantbitecatering.com">
                     <button class="elegantsweets-button">ElegantBiteCatering</button>
                 </a>
             </div>
@@ -72,8 +72,8 @@
         <div class="footer-links">
             <a class="links-text">Links</a>
             <dt class="fl-info"><a href="#header-container"><button class="fl-infob">Sweets</button></a></dt>
-            <dt class="fl-info"><a href="index.html"><button class="fl-infob">Catering</button></a></dt>
-            <dt class="fl-info"><a href="fattoamano.html"><button class="fl-infob">FattoaMano</button></a></dt>
+            <dt class="fl-info"><a href="https://elegantbitcatering.com"><button class="fl-infob">Catering</button></a></dt>
+            <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
         </div>
         <a class="copy-container" href="#head-container">
             <button class="copyright">© 2024 ELEGANTBITECATERINGINC</button>
