--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" id="ELEGANTBITECATERINGINC" style="scroll-behavior: smooth;">
     <head>
         <title>Fatto A Mano</title>
