Removed INC and Changed to LLC

--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -76,7 +76,7 @@
             <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
         </div>
         <a class="copy-container" href="#head-container">
-            <button class="copyright">© 2024 ELEGANTBITECATERINGINC</button>
+            <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
         </a>
     </div>
     </footer>
