--- a/fattoamanolocation.html
+++ b/fattoamanolocation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="ELEGANTBITECATERINGINC" style="scroll-behavior: smooth;">
+<html lang="en" id="ELEGANTBITECATERINGLLC" style="scroll-behavior: smooth;">
     <head>
         <title>Fatto A Mano</title>
         <link rel="stylesheet" href="css/fattoamanolocation.css">
@@ -55,7 +55,7 @@
             </div>
             <div class="copyright-container">
                 <a class="copy-container" href="#header-container">
-                    <button class="copyright">© 2024 ELEGANTBITECATERINGINC</button>
+                    <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
                 </a>
             </div>
         </div>
