--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -72,7 +72,7 @@
         <div class="footer-links">
             <a class="links-text">Links</a>
             <dt class="fl-info"><a href="#header-container"><button class="fl-infob">Sweets</button></a></dt>
-            <dt class="fl-info"><a href="https://elegantbitcatering.com"><button class="fl-infob">Catering</button></a></dt>
+            <dt class="fl-info"><a href="https://elegantbitecatering.com"><button class="fl-infob">Catering</button></a></dt>
             <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
         </div>
         <a class="copy-container" href="#head-container">
