--- a/404.html
+++ b/404.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    e
-</body>
+<html lang="en" id="ELEGANTBITECATERINGLLC" style="scroll-behavior: smooth;">
+    <head>
+        <title>404</title>
+        <link rel="stylesheet" href="css/404.css">
+        <link rel="stylesheet" href="https://use.typekit.net/xor7tlf.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">   
+    </head>
+    <body>
+        <div class="b1">
+            <div class="b1-text-container">
+                <a class="b1-text">404!</a>
+            </div>
+            <div class="b1-dtext-container">
+                <a class="b1-dtext">This Url is not in our database! Go to https://www.elegantbitecatering.com to get back to the right place.</a>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-container">
+                <div class="fl-container">
+                    <a class="footer-logo">Elegant Bite Catering</a>
+                </div>
+                <div class="footer-contact">
+                    <a class="fc-text">Contact</a>
+                    <dt class="fcontact-info">(513)714-4600</dt>
+                    <dt class="fcontact-info">(513)470-9551</dt>
+                    <dt class="fcontact-info">Elegantbitecatering@hotmail.com</dt>
+                    <dt class="fcontact-info">Butler, Ohio</dt>
+                </div>
+                <div class="footer-links">
+                    <a class="links-text">Links</a>
+                    <dt class="fl-info"><a href="#head-container"><button class="fl-infob">Catering</button></a></dt>
+                    <dt class="fl-info"><a href="elegantsweets.html"><button class="fl-infob">Sweets</button></a></dt>
+                    <dt class="fl-info"><a href="fattoamano.html"><button class="fl-infob">FattoaMano</button></a></dt>
+                </div>
+                <a class="copy-container" href="#head-container">
+                    <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
+                </a>
+            </div>
+        </footer>
+    </body>
 </html>
