--- a/404.html
+++ b/404.html
@@ -29,11 +29,11 @@
                 </div>
                 <div class="footer-links">
                     <a class="links-text">Links</a>
-                    <dt class="fl-info"><a href="#head-container"><button class="fl-infob">Catering</button></a></dt>
-                    <dt class="fl-info"><a href="elegantsweets.html"><button class="fl-infob">Sweets</button></a></dt>
-                    <dt class="fl-info"><a href="fattoamano.html"><button class="fl-infob">FattoaMano</button></a></dt>
+                    <dt class="fl-info"><a href="index"><button class="fl-infob">Catering</button></a></dt>
+                    <dt class="fl-info"><a href="elegantsweets"><button class="fl-infob">Sweets</button></a></dt>
+                    <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
                 </div>
-                <a class="copy-container" href="#head-container">
+                <a class="copy-container" href="index">
                     <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
                 </a>
             </div>
