changed copyright link to elegantbitecatering website

--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -75,7 +75,7 @@
             <dt class="fl-info"><a href="https://elegantbitecatering.com"><button class="fl-infob">Catering</button></a></dt>
             <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
         </div>
-        <a class="copy-container" href="#head-container">
+        <a class="copy-container" href="index">
             <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
         </a>
     </div>
