Changed index to website link

--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -85,7 +85,7 @@
                 <dt class="fl-info"><a href="https://elegantbitecatering.com"><button class="fl-infob">Catering</button></a></dt>
             </div>
             <div class="copyright-container">
-                <a class="copy-container" href="index">
+                <a class="copy-container" href="https://elegantbitecatering.com">
                     <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
                 </a>
             </div>
