--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -80,7 +80,7 @@
             </div>
             <div class="footer-links">
                 <a class="links-text">Links</a>
-                <dt class="fl-info"><a href="#header-container"><button class="fl-infob">FattoaMano</button></a></dt>
+                <dt class="fl-info"><a href="fattoamano.html"><button class="fl-infob">FattoaMano</button></a></dt>
                 <dt class="fl-info"><a href="elegantsweets"><button class="fl-infob">Sweets</button></a></dt>
                 <dt class="fl-info"><a href="https://elegantbitecatering.com"><button class="fl-infob">Catering</button></a></dt>
             </div>
