--- a/fattoamano.html
+++ b/fattoamano.html
@@ -11,7 +11,9 @@
         <header>
             <div class="header-container" id="header-container">
                 <div class="logo-container">
-                    <img src="img/PfpLogoWhite.png" width="100%" height="10%">   
+                    <a href="#b2">
+                        <img src="img/PfpLogoWhite.png" width="100%" height="10%">   
+                    </a>  
                 </div>
                 <div class="links">
                     <a class="menu-container" href="fattoamanomenu">
@@ -28,7 +30,7 @@
                 <a class="b1-text">Fatto A Mano</a>
             </div>
         </div>
-        <div class="b2">
+        <div class="b2" id="b2">
             <div class="b2-text-container">
                 <a class="b2-text">Be Ready to Know when we open and where.</a>
             </div>
