--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -10,7 +10,9 @@
         <header>
             <div class="header-container" id="header-container">
                 <div class="logo-container">
-                    <img src="img/PfpLogoWhite.png" width="100%" height="10%">   
+                    <a href="fattoamano">
+                        <img src="img/PfpLogoWhite.png" width="100%" height="10%">   
+                    </a>   
                 </div>
                 <div class="links">
                     <a class="menu-container" href="fattoamano">
