--- a/fattoamanolocation.html
+++ b/fattoamanolocation.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="css/fattoamanolocation.css">
         <link rel="icon" type="image/x-icon" href="img/fattoamanoico.ico">
         <link rel="stylesheet" href="https://use.typekit.net/xor7tlf.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -48,6 +49,9 @@
                 <dt class="fcontact-info">(513)470-9551</dt>
                 <dt class="fcontact-info">Elegantbitecatering@hotmail.com</dt>
                 <dt class="fcontact-info">Butler, Ohio</dt>
+                <a href="https://twitter.com/FattoaManoOhio"><i class="fa fa-twitter" style="font-size:28px;color:white"></i></a>
+                <a href="https://www.instagram.com/fattoamanowoodfirepizza/"><i class="fa fa-instagram" style="font-size:28px;color:white"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61557625385976"><i class="fa fa-facebook" style="font-size:28px;color:white"></i></a>
             </div>
             <div class="footer-links">
                 <a class="links-text">Links</a>
