Added 2023-2024 instead of just 2024 to the copyight

--- a/fattoamano.html
+++ b/fattoamano.html
@@ -62,7 +62,7 @@
             </div>
             <div class="copyright-container">
                 <a class="copy-container" href="https://elegantbitecatering.com">
-                    <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
+                    <button class="copyright">© 2023-2024 ELEGANTBITECATERINGLLC</button>
                 </a>
             </div>
         </div>
