Changed 404's copyright to 2023-2024 instead of just 2024

--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
                     <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
                 </div>
                 <a class="copy-container" href="https://elegantbitecatering.com">
-                    <button class="copyright">© 2024 ELEGANTBITECATERINGLLC</button>
+                    <button class="copyright">© 2023-2024 ELEGANTBITECATERINGLLC</button>
                 </a>
             </div>
         </footer>
