--- a/fattoamano.html
+++ b/fattoamano.html
@@ -33,7 +33,7 @@
         </div>
         <div class="b2" id="b2">
             <div class="b2-text-container">
-                <a class="b2-text">Be Ready to Know when we open and where.</a>
+                <a class="b2-text">We are going to be at the Historic Hamilton Farmers market this saturday!</a>
             </div>
             <div class="b2-twitter-container">
                 <a style="text-decoration:none" href="https://www.twitter.com/@FattoaManoOhio" class="b2-twitter">@FattoaManoOhio</a>
