--- a/fattoamanolocation.html
+++ b/fattoamanolocation.html
@@ -32,7 +32,7 @@
         </div>
         <div class="b2">
             <div class="b2-text-container">
-                <a class="b2-text">We are not at a location yet come back and check when we are.</a>
+                <a class="b2-text">We are going to be at the Historic Hamilton Farmers Market for more information look at the google maps below.</a>
             </div>
             <div class="gmap-container" id="gmap-container">
                 <iframe class="gmap" width="600" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDSWWjZV_d4rQhHo5cKshzFknD8bsx7ALs&q=101+High+St,+Hamilton,+OH+45011"></iframe>
