--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -35,17 +35,17 @@
                 <div class="pizza-container">
                     <a class="pizza-text">Pizza</a>
                 </div>
-                <dt class="b2-mm-text">Margherita $12</dt>
+                <dt class="b2-mm-text">Margherita $13</dt>
                 <dt class="b2-md-text">Homemade Pizza Sauce, Basil, Fresh Mozzarella, Grana Padano Cheese</dd>
-                <dt class="b2-mm-text">Veggie Lovers $13</dt>
+                <dt class="b2-mm-text">Veggie Lovers $14</dt>
                 <dt class="b2-md-text">Homemade Pizza Sauce, Mushrooms, Red Onions, Green Peppers, Black Olives, Parmesan, Mozzarella Cheese</dd>
-                <dt class="b2-mm-text">Pepperoni $14</dt>
+                <dt class="b2-mm-text">Pepperoni $15</dt>
                 <dt class="b2-md-text">Homemade Pizza Sauce, Mozzarella Cheese, Pepperoni</dd>
-                <dt class="b2-mm-text">Meat Lovers $16</dt>
+                <dt class="b2-mm-text">Meat Lovers $17</dt>
                 <dt class="b2-md-text">Homemade Pizza Sauce, Sausage, Pepperoni, Ham, Bacon, Garlic, Mozzarella Cheese</dd>
-                <dt class="b2-mm-text">Bacon Chicken Ranch $15</dt>
+                <dt class="b2-mm-text">Bacon Chicken Ranch $16</dt>
                 <dt class="b2-md-text">Ranch Dressing, Chopped Bacon, Grilled Chicken, Sautéed Onions, Sliced Roma Tomatoes</dd>
-                <dt class="b2-mm-text">Cheese Pizza $12</dt>
+                <dt class="b2-mm-text">Cheese Pizza $13</dt>
                 <dt class="b2-md-text">Homemade Pizza Sause, Mozzarella Cheese</dd>
                 <div class="toppings-container">
                     <a class="toppings-text">Toppings For The Cheese Pizza</a>
@@ -54,19 +54,19 @@
                 <dt class="b2-t-text">Bacon $1</dt>
                 <dt class="b2-t-text">Chicken $1</dt>
                 <dt class="b2-t-text">Italian Sausage $1</dt>
-                <dt class="b2-t-text">Black Olives $0.50</dt>
-                <dt class="b2-t-text">Mushrooms $0.50</dt>
-                <dt class="b2-t-text">Red Onions $0.50</dt>
-                <dt class="b2-t-text">Green Peppers $0.50</dt>
-                <dt class="b2-t-text">Roma Tomatos $0.50</dt>
+                <dt class="b2-t-text">Black Olives $1</dt>
+                <dt class="b2-t-text">Mushrooms $1</dt>
+                <dt class="b2-t-text">Red Onions $1</dt>
+                <dt class="b2-t-text">Green Peppers $1</dt>
+                <dt class="b2-t-text">Roma Tomatos $1</dt>
                 <div class="drinks-container">
                     <a class="drinks-text">Drinks</a>
                 </div>
-                <dt class="b2-mm-text">Coke $1.50</dt>
-                <dt class="b2-mm-text">Coke Zero $1.50</dt>
-                <dt class="b2-mm-text">Diet Coke $1.50</dt>
-                <dt class="b2-mm-text">Sprite $1.50</dt>
-                <dt class="b2-mm-text">Bottled Water $1.00</dt>
+                <dt class="b2-mm-text">Coke $2</dt>
+                <dt class="b2-mm-text">Coke Zero $2/dt>
+                <dt class="b2-mm-text">Diet Coke $2</dt>
+                <dt class="b2-mm-text">Sprite $2</dt>
+                <dt class="b2-mm-text">Bottled Water $1.50</dt>
             </div>
         </div>
     <footer>
