--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -63,7 +63,7 @@
                     <a class="drinks-text">Drinks</a>
                 </div>
                 <dt class="b2-mm-text">Coke $2</dt>
-                <dt class="b2-mm-text">Coke Zero $2/dt>
+                <dt class="b2-mm-text">Coke Zero $2</dt>
                 <dt class="b2-mm-text">Diet Coke $2</dt>
                 <dt class="b2-mm-text">Sprite $2</dt>
                 <dt class="b2-mm-text">Bottled Water $1.50</dt>
