--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <button class="elegantsweets-button">ElegantSweets</button>
                 </a>
                 <a class="fattoamano-container" href="fattoamano">
-                    <button class="fattoamano-button">FattoaMan</button>
+                    <button class="fattoamano-button">FattoaMano</button>
                 </a>
             </div>
         </div>
