--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -3,6 +3,13 @@
         <title>Elegant Sweets</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/elgantsweetsstyle.css">
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+  
+            gtag('config', 'G-TJZW9KMR0Y');
+        </script>
     </head>
     <header>
         <div class="header-container" id="header-container">
