--- a/fattoamano.html
+++ b/fattoamano.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="https://use.typekit.net/xor7tlf.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">   
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+  
+            gtag('config', 'G-TJZW9KMR0Y');
+        </script>
     </head>
     <body>
         <header>
