--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -6,6 +6,13 @@
         <link rel="icon" type="image/x-icon" href="img/fattoamanoico.ico">
         <link rel="stylesheet" href="https://use.typekit.net/xor7tlf.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+  
+            gtag('config', 'G-TJZW9KMR0Y');
+        </script>
     </head>
     <body>
         <header>
