--- a/index.html
+++ b/index.html
@@ -1,93 +1,75 @@
 <!DOCTYPE html>
 <html lang="en" id="ELEGANTBITECATERINGLLC" style="scroll-behavior: smooth;">
     <head>
-        <title>Elegant Bite Catering</title>
-        <link rel="stylesheet" href="css/elegantbitecateringstyle.css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">   
+        <title>Fatto A Mano</title>
+        <link rel="stylesheet" href="css/fattoamano.css">
+        <link rel="icon" type="image/x-icon" href="img/fattoamanoico.ico">
         <link rel="stylesheet" href="https://use.typekit.net/xor7tlf.css">
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-TJZW9KMR0Y"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">   
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'G-TJZW9KMR0Y');
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+  
+            gtag('config', 'G-TJZW9KMR0Y');
         </script>
     </head>
-<body>
-    <header>
-        <div class="head-container" id="head-container">
-            <a class="logo" href="#middle-container">
-                <button class="logo-text">Elegant Bite Catering</button>
-            </a>
-            <div class="links">
-                <a class="elegantsweets-container" href="elegantsweets">
-                    <button class="elegantsweets-button">ElegantSweets</button>
-                </a>
-                <a class="fattoamano-container" href="fattoamano">
-                    <button class="fattoamano-button">FattoaMano</button>
-                </a>
+    <body>
+        <header>
+            <div class="header-container" id="header-container">
+                <div class="logo-container">
+                    <a href="#b2">
+                        <img src="img/PfpLogoWhite.png" width="100%" height="10%">   
+                    </a>  
+                </div>
+                <div class="links">
+                    <a class="menu-container" href="fattoamanomenu">
+                        <button class="menu-button">Menu</button>
+                    </a> 
+                    <a class="location-container" href="fattoamanolocation">
+                        <button class="location-button">Location</button>
+                    </a> 
+                </div>
+            </div>
+        </header>
+        <div class="b1">
+            <div class="b1-text-container">
+                <a class="b1-text">Fatto A Mano</a>
             </div>
         </div>
-    </header>
-    <div class="description-text-container" id="description-text-container">
-        <a class="description-text">Elegant Bite Catering</a>
-    </div>
-    <div class="middle-container" id="middle-container">
-        <div class="businesses">
-            <div class="bis-container">
-                <span class="bis-text">Elegant Bite Catering</span>
-                <span class="bis-text">Elegant Sweets</span>
-                <span class="bis-text">Fatto A Mano Wood Fire Pizza</span>
-                <span class="bis-text">Redneck Wild Child</span>
+        <div class="b2" id="b2">
+            <div class="b2-text-container">
+                <a class="b2-text">We are going to be at the Historic Hamilton Farmers market this saturday!</a>
+            </div>
+            <div class="b2-twitter-container">
+                <a style="text-decoration:none" href="https://www.twitter.com/@FattoaManoOhio" class="b2-twitter">@FattoaManoOhio</a>
             </div>
         </div>
-        <div class="needs">
-            <div class="ways-container">
-                <dt class="ways-text">Parties</dt>
-                <dt class="ways-text">Weddings</dt>
-                <dt class="ways-text">Events</dt>
-                <dt class="ways-text">ETC</dt>
-            </div>
-            <div class="needs-container">
-                <dt class="nh-text">We Make</dt>
-                <dt class="nh-text">Your Food</dt>
-                <dt class="nh-text">Needs</dt>
-                <dt class="nh-text">Happen...</dt>
-            </div>
-            <a class="needs-logo" href="#head-container">
-                <button class="n-logo">Elegant Bite Catering</button>
-            </a>
-        </div>
-        <div class="contact" id="contact">
-            <div class="ct-container">
-                <a class="contact-text">Get In Touch</a>
-                <dt class="ct-info">Cell (513)316-0498</dt>
-                <dt class="ct-info">Email: Elegantbitecatering@hotmail.com</dt>
-            </div>
-        </div>
-    </div>
     <footer>
         <div class="footer-container">
             <div class="fl-container">
-                <a class="footer-logo">Elegant Bite Catering</a>
+                <img src="img/PfpLogoWhite.png" width="100%" height="10%">
             </div>
             <div class="footer-contact">
                 <a class="fc-text">Contact</a>
                 <dt class="fcontact-info">(513)316-0498</dt>
                 <dt class="fcontact-info">Elegantbitecatering@hotmail.com</dt>
                 <dt class="fcontact-info">Butler, Ohio</dt>
+                <a href="https://twitter.com/FattoaManoOhio"><i class="fa fa-twitter" style="font-size:28px;color:white"></i></a>
+                <a href="https://www.instagram.com/fattoamanowoodfirepizza/"><i class="fa fa-instagram" style="font-size:28px;color:white"></i></a>
             </div>
             <div class="footer-links">
                 <a class="links-text">Links</a>
-                <dt class="fl-info"><a href="#head-container"><button class="fl-infob">Catering</button></a></dt>
+                <dt class="fl-info"><a href="#header-container"><button class="fl-infob">FattoaMano</button></a></dt>
                 <dt class="fl-info"><a href="elegantsweets"><button class="fl-infob">Sweets</button></a></dt>
-                <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
+                <dt class="fl-info"><a href="https://elegantbitecatering.com"><button class="fl-infob">Catering</button></a></dt>
             </div>
-            <a class="copy-container" href="#head-container">
-                <button class="copyright">© 2023 - <span id="current-year">2024</span> ELEGANTBITECATERINGLLC</button>
-            </a>
+            <div class="copyright-container">
+                <a class="copy-container" href="https://elegantbitecatering.com">
+                    <button class="copyright">© 2023 - <span id="current-year">2024</span> ELEGANTBITECATERINGLLC</button>
+                </a>
+            </div>
         </div>
         <script>
             window.addEventListener('load', onLoad);
@@ -103,5 +85,6 @@
             }
           </script>
     </footer>
-</body>
+    </body>
 </html>
+
