--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -42,11 +42,11 @@
                 <div class="pizza-container">
                     <a class="pizza-text">Pizza</a>
                 </div>
-                <dt class="b2-mm-text">Margherita $15.00</dt>
+                <dt class="b2-mm-text">Margherita $16.00</dt>
                 <dt class="b2-md-text">Homemade Pizza Sauce, Basil, Fresh Mozzarella, Grana Padano Cheese</dd>
-                <dt class="b2-mm-text">Veggie Lovers $16.00</dt>
+                <dt class="b2-mm-text">Veggie Lovers $17.00</dt>
                 <dt class="b2-md-text">Homemade Pizza Sauce, Mushrooms, Red Onions, Green Peppers, Black Olives, Parmesan, Mozzarella Cheese</dd>
-                <dt class="b2-mm-text">Pepperoni $16.00</dt>
+                <dt class="b2-mm-text">Pepperoni $17.00</dt>
                 <dt class="b2-md-text">Homemade Pizza Sauce, Mozzarella Cheese, Pepperoni</dd>
                 <dt class="b2-mm-text">Meat Lovers $18.00</dt>
                 <dt class="b2-md-text">Homemade Pizza Sauce, Sausage, Pepperoni, Ham, Bacon, Garlic, Mozzarella Cheese</dd>
@@ -54,6 +54,8 @@
                 <dt class="b2-md-text">Ranch Dressing, Chopped Bacon, Grilled Chicken, Sautéed Onions, Sliced Roma Tomatoes</dd>
                 <dt class="b2-mm-text">Cheese Pizza $14.00</dt>
                 <dt class="b2-md-text">Homemade Pizza Sause, Mozzarella Cheese</dd>
+                <dt class="b2-mm-text">Gluten Free Crust Cheese Pizza $14.00</dt>
+                <dt class="b2-md-text">Homemade Pizza Sause, Mozzarella Cheese, Gluten Free Crust</dd>
                 <div class="toppings-container">
                     <a class="toppings-text">Toppings For The Cheese Pizza</a>
                 </div>
@@ -69,10 +71,10 @@
                 <div class="drinks-container">
                     <a class="drinks-text">Drinks</a>
                 </div>
-                <dt class="b2-mm-text">Coke $2.00</dt>
-                <dt class="b2-mm-text">Coke Zero $2.00</dt>
-                <dt class="b2-mm-text">Diet Coke $2.00</dt>
-                <dt class="b2-mm-text">Sprite $2.00</dt>
+                <dt class="b2-mm-text">Coke $2.50</dt>
+                <dt class="b2-mm-text">Coke Zero $2.50</dt>
+                <dt class="b2-mm-text">Diet Coke $2.50</dt>
+                <dt class="b2-mm-text">Sprite $2.50</dt>
                 <dt class="b2-mm-text">Bottled Water $1.50</dt>
             </div>
         </div>
@@ -88,7 +90,6 @@
                 <dt class="fcontact-info">Butler, Ohio</dt>
                 <a href="https://twitter.com/FattoaManoOhio"><i class="fa fa-twitter" style="font-size:28px;color:white"></i></a>
                 <a href="https://www.instagram.com/fattoamanowoodfirepizza/"><i class="fa fa-instagram" style="font-size:28px;color:white"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=61557625385976"><i class="fa fa-facebook" style="font-size:28px;color:white"></i></a>
             </div>
             <div class="footer-links">
                 <a class="links-text">Links</a>
@@ -118,3 +119,4 @@
     </footer>
     </body>
 </html>
+
