--- a/fattoamanolocation.html
+++ b/fattoamanolocation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" id="ELEGANTBITECATERINGLLC" style="scroll-behavior: smooth;">
     <head>
-        <title>Calander | Fatto A Mano</title>
+        <title>Calendar | Fatto A Mano</title>
         <link rel="stylesheet" href="css/fattoamanolocation.css">
         <link rel="icon" type="image/x-icon" href="img/fattoamanoico.ico">
         <link rel="stylesheet" href="https://use.typekit.net/xor7tlf.css">
