--- a/fattoamano.html
+++ b/fattoamano.html
@@ -40,7 +40,7 @@
         </div>
         <div class="b2" id="b2">
             <div class="b2-text-container">
-                <a class="b2-text">We are going to be at the Historic Hamilton Farmers market this saturday!</a>
+                <a class="b2-text">Want us at your next event? If so contact us at elegantbitecatering@hotmail.com!</a>
             </div>
             <div class="b2-twitter-container">
                 <a style="text-decoration:none" href="https://www.twitter.com/@FattoaManoOhio" class="b2-twitter">@FattoaManoOhio</a>
