--- a/fattoamanolocation.html
+++ b/fattoamanolocation.html
@@ -67,7 +67,7 @@
             </div>
             <div class="copyright-container">
                 <a class="copy-container" href="index">
-                    <button class="copyright">© 2023 - <span id="current-year">2024</span> ELEGANTBITECATERINGLLC</button>
+                    <button class="copyright">© 2023 - <span id="current-year">2024</span> ELEGANTBITECATERINGLLC. All Rights Reserved.</button>
                 </a>
             </div>
         </div>
