--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -99,7 +99,7 @@
             </div>
             <div class="copyright-container">
                 <a class="copy-container" href="https://elegantbitecatering.com">
-                    <button class="copyright">© 2023 - <span id="current-year">2024</span> ELEGANTBITECATERINGLLC</button>
+                    <button class="copyright">© 2023 - <span id="current-year">2024</span> ELEGANTBITECATERINGLLC. All Rights Reserved.</button>
                 </a>
             </div>
         </div>
