--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
             </div>
             <a class="copy-container" href="#head-container">
-                <button class="copyright">© 2023 - <span id="current-year">2024</span> ELEGANTBITECATERINGLLC</button>
+                <button class="copyright">© 2023 - <span id="current-year">2024</span> ELEGANTBITECATERINGLLC. All Rights Reserved.</button>
             </a>
         </div>
         <script>
