--- a/elegantsweets.html
+++ b/elegantsweets.html
@@ -82,7 +82,7 @@
             <dt class="fl-info"><a href="fattoamano"><button class="fl-infob">FattoaMano</button></a></dt>
         </div>
         <a class="copy-container" href="https://elegantbitecatering.com">
-            <button class="copyright">© 2023 - <span id="current-year">2024</span> ELEGANTBITECATERINGLLC</button>
+            <button class="copyright">© 2023 - <span id="current-year">2024</span> ELEGANTBITECATERINGLLC. All Rights Reserved.</button>
         </a>
     </div>
     <script>
