--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -90,6 +90,7 @@
                 <dt class="fcontact-info">Butler, Ohio</dt>
                 <a href="https://twitter.com/FattoaManoOhio"><i class="fa fa-twitter" style="font-size:28px;color:white"></i></a>
                 <a href="https://www.instagram.com/fattoamanowoodfirepizza/"><i class="fa fa-instagram" style="font-size:28px;color:white"></i></a>
+                <a href="https://www.yelp.com/biz/fatto-a-mano-wood-fire-pizza-fairfield"><i class="fa fa-yelp" style="font-size:28px;color:white"></i></a>
             </div>
             <div class="footer-links">
                 <a class="links-text">Links</a>
