--- a/index.html
+++ b/index.html
@@ -30,40 +30,42 @@
             </div>
         </div>
     </header>
-    <div class="description-text-container" id="description-text-container">
-        <a class="description-text">Elegant Bite Catering</a>
-    </div>
-    <div class="middle-container" id="middle-container">
-        <div class="businesses">
-            <div class="bis-container">
-                <span class="bis-text">Elegant Bite Catering</span>
-                <span class="bis-text">Elegant Sweets</span>
-                <span class="bis-text">Fatto A Mano Wood Fire Pizza</span>
-                <span class="bis-text">Redneck Wild Child</span>
-            </div>
+    <div class="main-container" id="main-container">
+        <div class="description-text-container" id="description-text-container">
+            <a class="description-text">Elegant Bite Catering</a>
         </div>
-        <div class="needs">
-            <div class="ways-container">
-                <dt class="ways-text">Parties</dt>
-                <dt class="ways-text">Weddings</dt>
-                <dt class="ways-text">Events</dt>
-                <dt class="ways-text">ETC</dt>
+        <div class="middle-container" id="middle-container">
+            <div class="businesses">
+                <div class="bis-container">
+                    <span class="bis-text">Elegant Bite Catering</span>
+                    <span class="bis-text">Elegant Sweets</span>
+                    <span class="bis-text">Fatto A Mano Wood Fire Pizza</span>
+                    <span class="bis-text">Redneck Wild Child</span>
+                </div>
             </div>
-            <div class="needs-container">
-                <dt class="nh-text">We Make</dt>
-                <dt class="nh-text">Your Food</dt>
-                <dt class="nh-text">Needs</dt>
-                <dt class="nh-text">Happen...</dt>
+            <div class="needs">
+                <div class="ways-container">
+                    <dt class="ways-text">Parties</dt>
+                    <dt class="ways-text">Weddings</dt>
+                    <dt class="ways-text">Events</dt>
+                    <dt class="ways-text">ETC</dt>
+                </div>
+                <div class="needs-container">
+                    <dt class="nh-text">We Make</dt>
+                    <dt class="nh-text">Your Food</dt>
+                    <dt class="nh-text">Needs</dt>
+                    <dt class="nh-text">Happen...</dt>
+                </div>
+                <a class="needs-logo" href="#head-container">
+                    <button class="n-logo">Elegant Bite Catering</button>
+                </a>
             </div>
-            <a class="needs-logo" href="#head-container">
-                <button class="n-logo">Elegant Bite Catering</button>
-            </a>
-        </div>
-        <div class="contact" id="contact">
-            <div class="ct-container">
-                <a class="contact-text">Get In Touch</a>
-                <dt class="ct-info">Cell (513)316-0498</dt>
-                <dt class="ct-info">Email: Elegantbitecatering@hotmail.com</dt>
+            <div class="contact" id="contact">
+                <div class="ct-container">
+                    <a class="contact-text">Get In Touch</a>
+                    <dt class="ct-info">Cell (513)316-0498</dt>
+                    <dt class="ct-info">Email: Elegantbitecatering@hotmail.com</dt>
+                </div>
             </div>
         </div>
     </div>
