--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -26,8 +26,8 @@
                     <a class="menu-container" href="fattoamano">
                         <button class="menu-button">Home</button>
                     </a> 
-                    <a class="location-container" href="fattoamanolocation">
-                        <button class="location-button">Location</button>
+                    <a class="location-container" href="https://www.doordash.com/store/fatto-a-mano-wood-fire-pizza--hamilton-33984003/70059948/?preview=1">
+                        <button class="location-button">Order</button>
                     </a> 
                 </div>
             </div>
