--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="footer-contact">
                 <a class="fc-text">Contact</a>
                 <dt class="fcontact-info">(513)316-0498</dt>
-                <dt class="fcontact-info"><a href="mailto:elegantbitecatering@hotmail.com" class="fcontact-info">Elegantbitecatering@hotmail.com</a></dt>
+                <dt class="fcontact-info"><a href="mailto:elegantbitecatering@hotmail.com" class="fcontact-info">info@elegantbitecatering.com</a></dt>
                 <dt class="fcontact-info">Butler County, Ohio</dt>
             </div>
             <div class="footer-links">
@@ -109,3 +109,4 @@
     </footer>
 </body>
 </html>
+
